Make sure carousel navigation is behind block warnings

--- a/assets/src/components/editor-carousel/edit.css
+++ b/assets/src/components/editor-carousel/edit.css
@@ -1,5 +1,7 @@
 #amp-story-editor-carousel {
 	display: none;
+	position: relative;
+	z-index: -1;
 }
 
 @media (min-width: 961px) {
